REOPENED162834
Render tree should be all clean by the end of FrameView::layout().
https://bugs.webkit.org/show_bug.cgi?id=162834
Summary Render tree should be all clean by the end of FrameView::layout().
alan
Reported 2016-09-30 19:37:21 PDT
Add assertion to verify if we managed to clean all the renderers by the end of the layout(). The blocking bugs need to be addressed first.
Attachments
Patch (3.00 KB, patch)
2016-11-16 21:57 PST, alan
no flags
alan
Comment 1 2016-11-16 21:57:36 PST
WebKit Commit Bot
Comment 2 2016-11-17 13:23:51 PST
Comment on attachment 295027 [details] Patch Clearing flags on attachment: 295027 Committed r208859: <http://trac.webkit.org/changeset/208859>
WebKit Commit Bot
Comment 3 2016-11-17 13:23:54 PST
All reviewed patches have been landed. Closing bug.
alan
Comment 4 2016-11-17 13:24:50 PST
Keep it open until after the 3 remaining issues are fixed.
Note You need to log in before you can comment on or make changes to this bug.