Render tree should be all clean by the end of FrameView::layout(). https://bugs.webkit.org/show_bug.cgi?id=162834

Reviewed by Simon Fraser.

Source/WebCore:

This is a preventive patch to ensure we don't introduce new bugs through
dirty renderers. There are still 3 failing cases and they are skipped for now (debug only).

* page/FrameView.cpp:
(WebCore::RenderTreeNeedsLayoutChecker::~RenderTreeNeedsLayoutChecker):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/182570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208859 268f45cc-cd09-0410-ab3c-d52691b4dbfc